--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,35 @@
-/* applies for all divisions off our page */
+/* applies to all divisions of our page */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* applies for the background of our page and 
-gives a color of light grey */
+/* applies for the background of our page and gives a color of light grey */
 body {
     background-color: #d9dcd6;
 }
 
-/*  applies a green margin to our header and 
-sets the 
-font-family  */
+/*  applies a green margin to our header and sets the font-family  */
 header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans 
-Unicode', 'Lucida Grande', 'Lucida Sans', 
-Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-/* displays all elements from the header on the 
-same line */
+/* displays all elements from the header on the same line */
 header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-/* sets a color of light grey of "seo" inside 
-the h1 element */
+/* sets a color of light grey of span element "seo" inside the h1 element */
 header h1 .seo {
     color: #d9dcd6;
 }
 
-/* displays the nav elements on the right side 
-and sets the fonts, padding and margins */
+/* displays the nav elements on the right side and sets the fonts, padding and margins */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -47,35 +39,30 @@ Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
  
-/* removes the bullets from the list's elements 
-*/
+/* removes the bullets from the list's elements */
 header nav ul {
     list-style-type: none;
 }
 
-/* displays all three elements in a block and 
-sets a margin between */
+/* displays all three elements in a block and sets a margin between */
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* sets the color and removes the underlines of 
-all three anchor(links) elements */
+/* sets the color and removes the underlines of all three anchor elements */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-/* sets the font-size of every paragraph*/
+/* sets the font-size of every paragraph */
 p {
     font-size: 16px;
 }
 
-/* sets the main's background with our photo and 
-stretches it at a max set height of 800px and 
-width as max possible on the device used 
-(desktop or mobile) */ 
+/* sets the main's background with our photo and stretches it at a max set height of 800px and 
+width as max possible on the device used (desktop or mobile) */ 
 main {
     height: 800px;
     width: 100%;
@@ -85,15 +72,13 @@ main {
     background-position: center;
 }
 
-/* displays our photo on the left side of the 
-section */
+/* displays our photo on the left side of the section */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-/* displays our photo on the right side of the 
-section*/
+/* displays our photo on the right side of the section*/
 .float-right {
     float: right;
     margin-left: 25px;
@@ -106,8 +91,7 @@ section*/
     margin-left: 20px;
 }
 
-/* changed the background-color for better 
-contrast and made it more accessible for people 
+/* I have changed the background color for better contrast and made it more accessible for people 
 with visual impairment */ 
 .benefits {
     margin-right: 20px;
@@ -116,8 +100,7 @@ with visual impairment */
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', 
-Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0965ce;
 }
 
@@ -128,8 +111,7 @@ Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
-/* aligns the subtitle in the centre of our 
-section */
+/* aligns the subtitle in the centre of our section */
 .benefit-lead, .benefit-brand, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -156,96 +138,76 @@ section */
     max-width: 150px;
 }
 
-/* displays the section for this specifications 
-*/
+/* displays the section for this specifications */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 
-Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
-/* displays the section inside the element for 
-this 
-specifications */
+/* displays the section inside the element for this specifications */
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 
-Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
-/* displays the section inside the element for 
-this 
-specifications */
+/* displays the section inside the element for this specifications */
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 
-Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
-/* displays the image inside the element for 
-this 
-specifications */
+/* displays the image inside the element for this specifications */
 .search-engine-optimization img {
     max-height: 200px;
 
 }
 
-/* displays the image inside the element for 
-this 
-specifications */
+/* displays the image inside the element for this specifications */
 .online-reputation-management img {
     max-height: 200px;
 }
 
-/* displays the image inside the element for 
-this 
-specifications */
+/* displays the image inside the element for this specifications */
 .social-media-marketing img {
     max-height: 200px;
 }
 
-/* sets the margin and font size of our section 
-sub-title */
+/* sets the margin and font size of our section sub-title */
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* sets the margin and font size of our section 
-sub-title */
+/* sets the margin and font size of our section sub-title */
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* sets the margin and font size of our section 
-sub-title */
+/* sets the margin and font size of our section sub-title */
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* sets the padding, align the text in the 
-middle of footer and creates an empty space to 
+/* sets the padding, align the text in the middle of footer and creates an empty space to 
 take up the remaining space */
 footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans 
-Unicode', 'Lucida Grande', 'Lucida Sans', 
-Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans',Arial, sans-serif;
     text-align: center;
 }
 
